--- a/TaskManagement.API/appsettings.json
+++ b/TaskManagement.API/appsettings.json
@@ -10,5 +10,6 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "clientSPAUrl": "http://localhost:4200"
 }
